<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Submitted By: Jordan Trenholm
 * Assignment: 2
 * Date: 2019/02/28
 */
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/win_lose_draw"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="36dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="36dp">

        <ImageButton
            android:id="@+id/rock_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_rock_button"
            android:backgroundTint="?android:colorBackground"
            android:layout_weight="1"
            android:contentDescription="@string/rock"
            android:onClick="playRochambo"/>

        <ImageButton
            android:id="@+id/paper_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_paper_button"
            android:backgroundTint="?android:colorBackground"
            android:layout_weight="1"
            android:contentDescription="@string/paper"
            android:onClick="playRochambo"/>

        <ImageButton
            android:id="@+id/scissor_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_scissor_button"
            android:backgroundTint="?android:colorBackground"
            android:layout_weight="1"
            android:contentDescription="@string/scissors"
            android:onClick="playRochambo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/result_text"
        android:baselineAligned="false"
        android:paddingHorizontal="18dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/user_move_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_none"
                android:contentDescription="@string/none"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/user_move_desc"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/user_move_desc"
                android:text="@string/user_move_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/cpu_move_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:srcCompat="@mipmap/ic_none"
                android:contentDescription="@string/none"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/cpu_move_desc"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/cpu_move_desc"
                android:text="@string/cpu_move_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>